--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -18,5 +18,6 @@ jobs:
       - run: |
           git config user.name 'statuspage'
           git config user.email status@iipython.dev
+          git add .
           git commit -am '[Automated] Minify ${{ github.sha }}'
           git push origin main
